# coq_project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PRECISION_PROBLEM_ANALYSIS.md  README.md  _CoqProject  build.bat  build.ps1  build.sh  clean.sh  copy_submission_files.ps1  copy_submission_files.sh
ProgrammingTask/: CMakeLists.txt  Makefile  README.md
ProgrammingTask/docs/: analyze_testing.md  design_notes.md  examples.md  language_spec.md  symtab_testing.md
ProgrammingTask/examples/: example_1.wd  example_2.wd  example_3.wd  example_chj.wd  example_hyd.wd  example_ylc.wd  parser_test.wd  pointers.wd  simple_decl.wd  simple_test.wd  test_err_addr_rvalue.wd  test_err_ptr_diff_type_lt.wd  test_err_ptr_int_compare.wd  test_ok.wd  test_pointer_errors.wd  test_scope_err.wd  test_type_err.wd  type_errors.wd
ProgrammingTask/include/: analyze.h  ast.h  ast_dumper.h  driver.h  lexer.h  parser.h  parser_1.h  symtab.h  type.h  util.h
ProgrammingTask/scripts/: format.sh  gen_parser.sh
ProgrammingTask/src/: analyze.c  ast.c  ast_dumper.c  ast_printer.c  driver.c  lexer.l  main.c  parser.y  symtab.c  test_lexer.c  test_parser.c  type.c  util.c
ProgrammingTask/tests/: run_examples.sh  run_tests.sh  test_lexer.c  test_parser.c  test_symtab_unit.c
ProgrammingTask/tests/cases/: err_addr_rvalue.wd  err_deref_nonptr.wd  err_int_ptr_implicit.wd  err_not_ptr.wd  err_pointer_add.wd  err_pointer_mul.wd  err_ptr_diff_type_eq.wd  err_ptr_int_implicit.wd  err_type_mismatch.wd  err_unary_minus_ptr.wd  err_undefined_var.wd  test_arithmetic_ops.wd  test_basic_types.wd  test_cast_explicit.wd  test_comparison_ops.wd  test_deref_assign.wd  test_if_else.wd  test_implicit_conversion.wd  (+7 more)
ProgrammingTask/tools/: ast.c  ast_pretty.c
(+30 files in other folders)
